Extend image pull secrets tests (#7441)

--- a/image/templates/helm/stackrox-secured-cluster/templates/collector-rbac.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/collector-rbac.yaml
@@ -11,6 +11,6 @@ metadata:
   annotations:
     {{- include "srox.annotations" (list . "serviceaccount" "collector") | nindent 4 }}
 imagePullSecrets:
-{{- range $secretName := ._rox.collectorImagePullSecrets._names }}
+{{- range $secretName := concat ._rox.collectorImagePullSecrets._names ._rox.mainImagePullSecrets._names | uniq }}
 - name: {{ quote $secretName }}
 {{- end }}
