--- a/pkg/charts/tests/securedclusterservices/testdata/helmtest/image-pull-secrets.test.yaml
+++ b/pkg/charts/tests/securedclusterservices/testdata/helmtest/image-pull-secrets.test.yaml
@@ -1,33 +1,89 @@
+defs: |
+  def authForCollector:
+    (container(.daemonsets.collector; "collector") | .image | sub("/.*$"; "")) as $collectorRegistry |
+      .secrets["secured-cluster-services-collector"].data[".dockerconfigjson"] | @base64d | fromjson | .auths
+        | .["https://" + $collectorRegistry] | .auth | @base64d;
+
+  def authForMain:
+      (container(.deployments.sensor; "sensor") | .image | sub("/.*$"; "")) as $mainRegistry |
+        .secrets["secured-cluster-services-main"].data[".dockerconfigjson"] | @base64d | fromjson | .auths
+          | .["https://" + $mainRegistry] | .auth | @base64d;
+
+expect: |
+  # Ensure that default/legacy service accounts are always referenced in the correct fashion in the non-error case
+
+  assumeThat(.error == null) | .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox")
+  assumeThat(.error == null) | .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox-collector")
+
+  assumeThat(.error == null) | .serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox")
+  assumeThat(.error == null) | [.serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
+  assumeThat(.error == null) | .serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox")
+  assumeThat(.error == null) | [.serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
+
 tests:
-- name: "IPS are not created with allowNone=true"
+- name: "with no IPS creation"
   expect: |
-    .secrets["secured-cluster-services-main"] | assertThat(. == null)
-    .secrets["secured-cluster-services-collector"] | assertThat(. == null)
-- name: "IPS are created with username and password specified"
-  values:
-    imagePullSecrets:
-      username: foo
-      password: bar
+    .secrets?["secured-cluster-services-main"]? | assertThat(. == null)
+    .secrets?["secured-cluster-services-collector"]? | assertThat(. == null)
+  tests:
+  - name: "with default settings of allowNone=true"
+  - name: "with allowNone=false"
+    set:
+      imagePullSecrets.allowNone: false
+    tests:
+    - name: "should fail with no extra secrets"
+      expectError: true
+    - name: "should succeed with useExisting"
+      expect: |
+        .serviceaccounts[] | [.imagePullSecrets[] | select(.name == "extra-secret1" or .name == "extra-secret2")]
+          | assertThat(length == 2)
+      tests:
+      - name: as JSON list
+        set:
+          imagePullSecrets.useExisting: ["extra-secret1", "extra-secret2"]
+
+      - name: as semicolon-delimited list string
+        set:
+          imagePullSecrets.useExisting: "extra-secret1; extra-secret2 "
+
+- name: "with IPS creation"
+  set:
+    imagePullSecrets.allowNone: false
+
   expect: |
     .secrets["secured-cluster-services-main"] | assertThat(. != null)
     .secrets["secured-cluster-services-collector"] | assertThat(. != null)
-- name: "IPS are created with empty password"
-  values:
-    imagePullSecrets:
-      username: foo
-      password: ""
-  expect: |
-    .secrets["secured-cluster-services-main"] | assertThat(. != null)
-    .secrets["secured-cluster-services-collector"] | assertThat(. != null)
+    .serviceaccounts[] | [.imagePullSecrets[] | select(.name == "secured-cluster-services-main")] | assertThat(length == 1)
+    .serviceaccounts.collector | [.imagePullSecrets[] | select(.name == "secured-cluster-services-collector")]
+      | assertThat(length == 1)
+  tests:
+  - name: "with username and password specified"
+    values:
+      imagePullSecrets:
+        username: foo
+        password: bar
+    expect: |
+      authForMain | assertThat(. == "foo:bar")
+      authForCollector | assertThat(. == "foo:bar")
+  - name: "with empty password"
+    values:
+      imagePullSecrets:
+        username: foo
+        password: ""
+    expect: |
+      authForMain | assertThat(. == "foo:")
+      authForCollector | assertThat(. == "foo:")
+
 - name: "default IPS are referenced in service accounts"
   expect: |
     .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox")
-    .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox")
     .serviceaccounts["collector"] | .imagePullSecrets[] | select(.name == "stackrox-collector")
+
     .serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox")
     [.serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
     .serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox")
     [.serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
+
 - name: "additional IPS are referenced in service accounts"
   values:
     imagePullSecrets:
