--- a/ui/packages/tailwind-config/package.json
+++ b/ui/packages/tailwind-config/package.json
@@ -20,6 +20,12 @@
         "clean": "rm -f tailwind.css",
         "build": "postcss ./index.tw.css -o ./tailwind.css",
         "start": "yarn build",
+        "lint:non-src": "prettier --check '**/*.{md,css,json}'",
+        "lint:src": "eslint --ext .js ./",
+        "lint": "npm-run-all lint:*",
+        "lint-fix:non-src": "prettier --write '**/*.{md,css,json}'",
+        "lint-fix:src": "eslint --fix --ext .js ./",
+        "lint-fix": "npm-run-all lint-fix:*",
         "prepublishOnly": "yarn clean && yarn build"
     },
     "dependencies": {
@@ -27,8 +33,12 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.2.3",
+        "eslint": "^7.18.0",
+        "eslint-config-prettier": "^7.2.0",
+        "eslint-plugin-prettier": "^3.3.1",
         "postcss": "^8.2.4",
         "postcss-cli": "^8.3.1",
+        "prettier": "^2.2.1",
         "tailwindcss": "^2.0.2"
     }
 }
