ROX-6450: Make collector work in non-standard namespace (#7460)

--- a/image/templates/helm/stackrox-secured-cluster/templates/collector.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/collector.yaml
@@ -43,6 +43,8 @@ spec:
           value: {{ ._rox.collector.collectionMethod }}
         - name: GRPC_SERVER
           value: {{ ._rox.sensor.endpoint }}
+        - name: SNI_HOSTNAME
+          value: "sensor.stackrox"
         {{- include "srox.envVars" (list . "daemonset" "collector" "collector") | nindent 8 }}
         resources:
           {{- ._rox.collector._resources | nindent 10 }}
