ROX-6445: Facilitate upgrade from old sensor chart (#7465)

--- a/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
@@ -104,6 +104,7 @@ customize:
 allowNonstandardNamespace: null # bool
 allowNonstandardReleaseName: null # bool
 meta:
+  namespaceOverride: null # bool
   useLookup: null # bool
   fileOverrides: {} # dict
   apiServer:
