ROX-6461: Respect {MAIN,COLLECTOR}_IMAGE_REPO (#7478)

--- a/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
@@ -29,12 +29,14 @@ image:
   main:
     registry: null # string
     name: null # string
+    repository: null # string
     tag: null # string
     fullRef: null # string
     pullPolicy: null # string
   collector:
     registry: null # string
     name: null # string
+    repository: null # string
     tag: null # string
     fullRef: null # string
     pullPolicy: null # string
