Flag out dackbox transformations for added safety (#7497)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2973,7 +2973,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
       - SENSOR_HELM_DEPLOY: true
@@ -3263,7 +3263,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
 
@@ -3334,7 +3334,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -3365,7 +3365,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -3402,7 +3402,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3439,7 +3439,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3458,7 +3458,7 @@ jobs:
     environment:
       - STORAGE: pvc
       - LOAD_BALANCER: lb
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_K8S_EVENTS_DETECTION: true
 
     steps:
@@ -3984,7 +3984,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -4012,7 +4012,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -4038,7 +4038,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -4254,7 +4254,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: true
+      - ROX_HOST_SCANNING: false
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
