Turn host scanning on and add back nodes for vuln mgmt (#7501)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2974,7 +2974,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
@@ -3265,7 +3265,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
@@ -3337,7 +3337,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -3369,7 +3369,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
@@ -3407,7 +3407,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3445,7 +3445,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -3465,7 +3465,7 @@ jobs:
     environment:
       - STORAGE: pvc
       - LOAD_BALANCER: lb
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_K8S_EVENTS_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
@@ -3992,7 +3992,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -4021,7 +4021,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -4048,7 +4048,7 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
@@ -4266,7 +4266,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_DETECTION_BASELINE_VIOLATION: true
-      - ROX_HOST_SCANNING: false
+      - ROX_HOST_SCANNING: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
