ROX-6494: Add an option to download StackRox CA certificate only and as k8s secrets (#7515)

--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -49,6 +49,9 @@ central.init-bundles.list.long = List all previously generated init bundles for 
 central.init-bundles.revoke.short = Revoke a cluster init bundle
 central.init-bundles.revoke.long = Revoke an init bundle for bootstrapping new StackRox secured clusters
 
+central.init-bundles.fetch-ca.short = Fetch the StackRox CA Configuration to be used with Helm
+central.init-bundles.fetch-ca.long = Fetch the StackRox CA Configuration to be used with Helm (use this if you are pre-creating secrets rather than using an init bundle)
+
 # Intentionally empty values
 central.generate.k8s.hostpath.short =
 central.generate.k8s.hostpath.long =
