--- a/pkg/charts/tests/securedclusterservices/testdata/helmtest/image-pull-secrets.test.yaml
+++ b/pkg/charts/tests/securedclusterservices/testdata/helmtest/image-pull-secrets.test.yaml
@@ -2,12 +2,14 @@ defs: |
   def authForCollector:
     (container(.daemonsets.collector; "collector") | .image | sub("/.*$"; "")) as $collectorRegistry |
       .secrets["secured-cluster-services-collector"].data[".dockerconfigjson"] | @base64d | fromjson | .auths
-        | .["https://" + $collectorRegistry] | .auth | @base64d;
+        | .["https://" + (if ($collectorRegistry == "docker.io") then "index.docker.io/v1/" else $collectorRegistry end)]
+        | .auth | @base64d;
 
   def authForMain:
       (container(.deployments.sensor; "sensor") | .image | sub("/.*$"; "")) as $mainRegistry |
         .secrets["secured-cluster-services-main"].data[".dockerconfigjson"] | @base64d | fromjson | .auths
-          | .["https://" + $mainRegistry] | .auth | @base64d;
+          | .["https://" + (if ($mainRegistry == "docker.io") then "index.docker.io/v1/" else $mainRegistry end)]
+          | .auth | @base64d;
 
 expect: |
   # Ensure that default/legacy service accounts are always referenced in the correct fashion in the non-error case
@@ -19,6 +21,15 @@ expect: |
   assumeThat(.error == null) | [.serviceaccounts["sensor"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
   assumeThat(.error == null) | .serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox")
   assumeThat(.error == null) | [.serviceaccounts["admission-control"] | .imagePullSecrets[] | select(.name == "stackrox-collector")] | assertThat(length == 0)
+
+  # Ensure that newly created secrets are always referenced in the correct fashion in the non-error case.
+  assumeThat(.error == null) | .serviceaccounts["collector"] | [.imagePullSecrets[] |
+    select(.name == "secured-cluster-services-main" or .name == "secured-cluster-services-collector")] |
+    assertThat(length == 2)
+  assumeThat(.error == null) | .serviceaccounts["sensor"] | .imagePullSecrets[] |
+    select(.name == "secured-cluster-services-main")
+  assumeThat(.error == null) | .serviceaccounts["admission-control"] | .imagePullSecrets[] |
+    select(.name == "secured-cluster-services-main")
 
 tests:
 - name: "with no IPS creation"
@@ -65,6 +76,20 @@ tests:
     expect: |
       authForMain | assertThat(. == "foo:bar")
       authForCollector | assertThat(. == "foo:bar")
+    tests:
+    - name: "with default registry"
+    - name: "with custom default registry"
+      set:
+        image.registry: my.registry.io
+    - name: "with custom main registry"
+      set:
+        image.main.registry: my.registry.io
+    - name: "with custom collector registry"
+      set:
+        image.collector.registry: my.collector-registry.io
+    - name: "with docker registry"
+      set:
+        image.registry: docker.io/stackrox
   - name: "with empty password"
     values:
       imagePullSecrets:
