--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller-secret.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller-secret.yaml
@@ -2,9 +2,8 @@
 
 {{- if or ._rox.createSecrets (and (kindIs "invalid" ._rox.createSecrets) (or ._rox.admissionControl.serviceTLS._cert ._rox.admissionControl.serviceTLS._key)) }}
 
-{{- if not (and ._rox.ca._cert ._rox.admissionControl.serviceTLS._cert ._rox.admissionControl.serviceTLS._key) }}
-  {{ include "srox.fail" "Requested secret creation, but not all of CA certificate, admission control certificate, admission control private key are available. Set the 'createSecrets' config option to false if you do not want secrets to be created." }}
-{{- end }}
+{{/* Admission control TLS secret isn't required, so do not fail here. */}}
+{{- if and ._rox.ca._cert ._rox.admissionControl.serviceTLS._cert ._rox.admissionControl.serviceTLS._key }}
 
 apiVersion: v1
 kind: Secret
@@ -27,4 +26,5 @@ stringData:
   admission-control-key.pem: |
     {{- ._rox.admissionControl.serviceTLS._key | nindent 4 }}
 
+{{- end }}
 {{- end }}
