--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
@@ -83,6 +83,9 @@ spec:
               readOnly: true
             - name: config-store
               mountPath: /var/lib/stackrox/admission-control/
+            - name: ca
+              mountPath: /run/secrets/stackrox.io/ca/
+              readOnly: true
             - name: certs
               mountPath: /run/secrets/stackrox.io/certs/
               readOnly: true
@@ -97,6 +100,7 @@ spec:
         - name: certs
           secret:
             secretName: admission-control-tls
+            optional: true
             items:
               - key: admission-control-cert.pem
                 path: cert.pem
@@ -104,6 +108,10 @@ spec:
                 path: key.pem
               - key: ca.pem
                 path: ca.pem
+        - name: ca
+          secret:
+            secretName: service-ca
+            optional: true
         - name: config
           configMap:
             name: admission-control
