[ROX-6129] Add log integration service (#7544)
* [ROX-6129] Add log integration service

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2198,6 +2198,7 @@ jobs:
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
     steps:
       - checkout
@@ -2979,6 +2980,7 @@ jobs:
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
       - SENSOR_HELM_DEPLOY: true
 
@@ -3268,6 +3270,7 @@ jobs:
       - ROX_HOST_SCANNING: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
@@ -3340,6 +3343,7 @@ jobs:
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
@@ -3370,6 +3374,7 @@ jobs:
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
@@ -3405,6 +3410,7 @@ jobs:
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
@@ -3441,6 +3447,7 @@ jobs:
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
@@ -3459,6 +3466,7 @@ jobs:
       - LOAD_BALANCER: lb
       - ROX_HOST_SCANNING: true
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
@@ -4002,6 +4010,7 @@ jobs:
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
       - SENSOR_HELM_DEPLOY: true
 
@@ -4029,6 +4038,7 @@ jobs:
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
@@ -4055,6 +4065,7 @@ jobs:
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
@@ -4154,6 +4165,7 @@ jobs:
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
       - ROX_K8S_EVENTS_DETECTION: true
+      - ROX_K8S_AUDIT_LOG_DETECTION: true
       - ROX_SCOPED_ACCESS_CONTROL_V2: true
 
     steps:
